# Onboard-SDK-ROS

./: ReadMe.md
include/dji_osdk_ros/: dji_vehicle_node.h  vehicle_wrapper.h
launch/: dji_vehicle_node.launch
src/dji_osdk_ros/: CMakeLists.txt  dji_vehicle_node.cpp
src/dji_osdk_ros/modules/: dji_vehicle_node_mission_services.cpp  dji_vehicle_node_publisher.cpp  vehicle_wrapper.cpp
src/dji_osdk_ros/samples/: CMakeLists.txt  activate_vo.cpp  activate_vo.cpp.bk  full_demo.cpp  full_demo.cpp.bk1  full_demo.cpp.bk2  full_demo_one_shot.cpp  human_input_node.cpp  mission_lora_vo.cpp  missions_node.cpp  missions_yaml.cpp  missions_yaml_corr.cpp  test_waypointV2_offset_mission.cpp  test_waypointV2_waypoint_mission.cpp  vo_landing.cpp  waypointV2_lora_node.cpp  waypointV2_lora_node.cpp.bk
srv/: FlightTaskControl.srv
yaml/: ElzeTestZigZag.yaml  ElzeeDemo.kml  ElzeeDemo.yaml  ElzeeDemoLong.kml  ElzeeDemoLong.yaml  ElzeeDemoLora.yaml  ElzeeDemoShort.kml  ElzeeDemo_short.yaml  ElzeeTest.kml  ElzeeTest.yaml  ElzeeTestZigZag.kml  ElzeeZigZag.kml  ElzeeZigZag.yaml  ElzeeZigZag22.yaml  dummy.yaml  full_demo_translate_east.yaml  full_demo_translate_north.yaml  full_demo_up_down.yaml  kml2yaml.py  mission1.yaml  takeoff_and_land.yaml  translate_north.yaml
